--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Root</string>
-    <string name="accessibility_service_description">开启功能, 以跟踪栈顶 Activity</string>
+    <string name="app_name">专用防封</string>
+    <string name="accessibility_service_description">开启此功能, 以防止刺激战场封号</string>
 </resources>
